fixed some serializable errors